--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
   <!-- ============ SLIDER ============ -->
   <div class="slider">
-    <div class="slide"><img src="image1.jpg" alt="Slide 1"></div>
+    <div class="slide"><img src="campus.jpeg" alt="Slide 1"></div>
     <div class="slide"><img src="image2.jpg" alt="Slide 2"></div>
     <div class="slide"><img src="image3.jpg" alt="Slide 3"></div>
   </div>
