--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
   <div class="popup-banner" id="popupBanner">
     <div class="popup-content" onclick="window.location.href='admission-info-2.html'">
       <span class="close-btn" onclick="event.stopPropagation(); closeBanner();">&times;</span>
-      <img src="Mumtaz pg college banner.jpg" alt="Admission Banner">
+      <img src=".jpg" alt="Admission Banner">
     </div>
   </div>
 
