--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ nav .submenu .has-submenu .submenu {
   <a href="#">👤 Committees</a>
 
   <!-- Photo Gallery -->
-  <a href="#">🖼️ Photo Gallery</a>
+  <a href="#">🖼️ Gallery</a>
 </div>
 
 <!-- ===== JS ===== -->
@@ -342,13 +342,12 @@ nav .submenu .has-submenu .submenu {
     <a href="zoology.html">Department of Zoology</a>
   </div>
 </div>
-   <a href="nss.html">🪢 NSS</a>
-   <a href="ncc.html">🎖️ NCC</a>
+   <a href="nss.html">🪢NSS</a>
+   <a href="ncc.html">🎖️NCC</a>
   <a href="library.html">📚 Library</a>
 </nav>
 
   <a href="admission-info-1.html">📝 Admission</a>
-  <a href="#">👤 Career</a>
   <!-- Student Corner -->
 <div class="has-submenu">
   <a href="#" onclick="toggleSubmenu(this)">🎓 Student Corner ▾</a>
