--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ nav .submenu .has-submenu .submenu {
   <!-- Manager Box -->
   <div class="message-box">
     <div class="message-left">
-      <img src="principal.jpg" alt="principal Photo">
+      <img src="Principal.jpg" alt="principal Photo">
       <h3>Principal<br><span>Prof. Naseem Ahmed Khan</span></h3>
     </div>
     <div class="message-right">
